--- a/about.html
+++ b/about.html
@@ -20,8 +20,7 @@
             <div class="about section">
                 <h2 class="about__title">INSTRUCTIONS</h2>
                 <div class="about__back">
-                    <p>COMO SE JUEGA
-                        The game consists of matching the combination generated randomly using JavaScript. To do this, it is necessary to fill row by row with the six established colors.
+                    <p>The game consists of matching the combination generated randomly using JavaScript. To do this, it is necessary to fill row by row with the six established colors.
                         The different levels of the game show, starting from the bottom, a "check" button that will be used to perform the check. Pressing the button also automatically moves you to the row above the filled row.
                         The next element we find on the screen is a row made up of six different colors, these default colors are the ones we will use next.
                         Next we find a row of four, five or six boxes depending on the level of difficulty, these will be the boxes that we must fill in. To the right of these boxes we find their equivalent in number, but of a smaller size, these will change their color to white in case we have a color that matches the color pattern created internally by JavaScript. When you guess the position of one of the colors, it will appear black.
