--- a/win.html
+++ b/win.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <!-- <meta name="refresh" content="3;url=otra_pagina.html"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MASTERMIND LEVEL 1</title>
     <link rel="stylesheet" href="./css/reset.css">
@@ -19,6 +20,7 @@
         <div class="container">
             <div class="win section">
                 <h2 class="win-title">¡¡¡YOU WIIN!!!</h2>
+                <img src="./img/winer.gif" alt="GIF" class="win_image">
                 <a class="new__game btn" href="./index.html" rel="#primerp">NEW GAME</a>
             </div>
         </div>
