--- a/win.html
+++ b/win.html
@@ -21,7 +21,7 @@
             <div class="win section">
                 <h2 class="win-title">¡¡¡YOU WIIN!!!</h2>
                 <img src="./img/winer.gif" alt="GIF" class="win_image">
-                <a class="new__game btn" href="./index.html" rel="#primerp">NEW GAME</a>
+                <a class="new__game btn" href="./levels.html" rel="#primerp">NEW GAME</a>
             </div>
         </div>
     </div>
